# hello-kubernetes

./: Readme.md  backend_deployment.yaml  backend_service.yaml  frontend_deployment.yaml  frontend_service.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: main.py
